test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/static_too_long.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  long
  identifier(b)
  ;
  }
  ;
  union
  identifier(u)
  identifier(x)
  =
  {
  const int(1)
  ,
  const int(2)
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
